# resume_screening_mcp

./: .env.example  README.md  pyproject.toml  resume_screening_mcp.py  setup.py
resume_screening_mcp/: __init__.py  __main__.py  cli.py  core.py  server.py
scripts/: dev.sh  test.sh
